--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lucide-vue-next": "^0.560.0",
     "radix-vue": "^1.9.17",
     "tailwind-merge": "^3.4.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-i18n": "^9.14.5"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
