--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
             args: ''
 
     runs-on: ${{ matrix.platform }}
+    environment: main
     steps:
       - uses: actions/checkout@v4
 
